force-app/main/default/objects/NewMatter__c/fields/OwendCharges__c.field-meta.xml
<CustomField>
    <fullName>OwendCharges__c</fullName>
    <formula>ServiceContractNewMatter__r.OwendCharges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SNT手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>