force-app/main/default/objects/NewMatter__c/fields/OwendToCommentCompany__c.field-meta.xml
<CustomField>
    <fullName>OwendToCommentCompany__c</fullName>
    <formula>Application__r.OwendToCompanyComment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SNT宛コメント_企業</label>
    <type>Text</type>
</CustomField>