force-app/main/default/objects/NewMatter__c/fields/OwendToCommentEmployee__c.field-meta.xml
<CustomField>
    <fullName>OwendToCommentEmployee__c</fullName>
    <formula>Application__r.OwendToEmployeeComment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SNT宛コメント_社員</label>
    <type>Text</type>
</CustomField>