force-app/main/default/objects/NewMatter__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>家主</label>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipName>NewMatterLandlordRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>