force-app/main/default/objects/NewMatter__c/fields/OwnerCheckDate__c.field-meta.xml
<CustomField>
    <fullName>OwnerCheckDate__c</fullName>
    <label>家主チェック日</label>
    <type>Date</type>
</CustomField>