force-app/main/default/objects/NewMatter__c/fields/OwnerChecker__c.field-meta.xml
<CustomField>
    <fullName>OwnerChecker__c</fullName>
    <label>家主チェック者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>