force-app/main/default/objects/NewMatter__c/fields/OwnerCheckMemoLenderProxy__c.field-meta.xml
<CustomField>
    <fullName>OwnerCheckMemoLenderProxy__c</fullName>
    <label>家主チェックメモ_貸主代理</label>
    <type>TextArea</type>
</CustomField>