force-app/main/default/objects/NewMatter__c/fields/OwnerCheckMemoManagementCompany__c.field-meta.xml
<CustomField>
    <fullName>OwnerCheckMemoManagementCompany__c</fullName>
    <label>家主チェックメモ_管理会社</label>
    <type>TextArea</type>
</CustomField>