force-app/main/default/objects/NewMatter__c/fields/ProjectImportantMatter__c.field-meta.xml
<CustomField>
    <fullName>ProjectImportantMatter__c</fullName>
    <label>案件重要事項</label>
    <type>TextArea</type>
</CustomField>