force-app/main/default/objects/NewMatter__c/fields/ProvisionalAmortisation__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalAmortisation__c</fullName>
    <formula>TEXT( BillingSecurityDeposit__c / Rent__c ) &amp; &quot;ヶ月分&quot;</formula>
    <label>暫定敷引</label>
    <type>Text</type>
</CustomField>