force-app/main/default/objects/NewMatter__c/fields/RealEstateCompanyStaffNameApplication__c.field-meta.xml
<CustomField>
    <fullName>RealEstateCompanyStaffNameApplication__c</fullName>
    <formula>Application__r.AgencyChargeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>不動産会社担当者名_申請</label>
    <type>Text</type>
</CustomField>