force-app/main/default/objects/NewMatter__c/fields/RealEstateNameAndRoom__c.field-meta.xml
<CustomField>
    <fullName>RealEstateNameAndRoom__c</fullName>
    <formula>RealEstate__r.RealEstateName__c + &quot;　&quot; +  RealEstate__r.RoomNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>物件名+号室</label>
    <type>Text</type>
</CustomField>