force-app/main/default/objects/NewMatter__c/fields/RealEstateNameCheck__c.field-meta.xml
<CustomField>
    <fullName>RealEstateNameCheck__c</fullName>
    <formula>IF (
 DecisionRealEstateName__c  =  DecisionRealEstateNameForEmployee__c , 
&quot;OK&quot;, 
&quot;NG&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>物件名チェック</label>
    <type>Text</type>
</CustomField>