force-app/main/default/objects/NewMatter__c/fields/Reapplication1_CheckAccountingDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1_CheckAccountingDate__c</fullName>
    <label>再申請①経理手配２次チェック日</label>
    <type>Date</type>
</CustomField>