force-app/main/default/objects/NewMatter__c/fields/Reapplication1CorporateHousingDAccept__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1CorporateHousingDAccept__c</fullName>
    <label>再申請①社宅D確認日（申請前）</label>
    <type>Date</type>
</CustomField>