force-app/main/default/objects/NewMatter__c/fields/Reapplication1FinanceContactContent__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1FinanceContactContent__c</fullName>
    <label>再申請①経理連絡内容（申請前）</label>
    <type>TextArea</type>
</CustomField>