force-app/main/default/objects/NewMatter__c/fields/Reapplication1FinanceContactDateAfter__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1FinanceContactDateAfter__c</fullName>
    <label>再申請①経理連絡日（承認後）</label>
    <type>Date</type>
</CustomField>