force-app/main/default/objects/NewMatter__c/fields/Reapplication1Memo__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1Memo__c</fullName>
    <label>再申請①再申請メモ</label>
    <type>TextArea</type>
</CustomField>