force-app/main/default/objects/NewMatter__c/fields/Reapplication1RealEstateCompanyAccept__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1RealEstateCompanyAccept__c</fullName>
    <label>再申請①不動産会社了承日</label>
    <type>Date</type>
</CustomField>