force-app/main/default/objects/NewMatter__c/fields/Reapplication1ReconfirmSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1ReconfirmSubmitDate__c</fullName>
    <label>再申請①再査提出日</label>
    <type>Date</type>
</CustomField>