force-app/main/default/objects/NewMatter__c/fields/Reapplication2CompanyContactDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2CompanyContactDate__c</fullName>
    <label>再申請②企業連絡日</label>
    <type>Date</type>
</CustomField>