force-app/main/default/objects/NewMatter__c/fields/Reapplication2FinanceContactDateAfter__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2FinanceContactDateAfter__c</fullName>
    <label>再申請②経理連絡日（承認後）</label>
    <type>Date</type>
</CustomField>