force-app/main/default/objects/NewMatter__c/fields/Reapplication3CorpHDContactDateAfter__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3CorpHDContactDateAfter__c</fullName>
    <label>再申請③社宅D連絡日（承認後）</label>
    <type>Date</type>
</CustomField>