force-app/main/default/objects/NewMatter__c/fields/Reapplication3CorporateHousingDAccept__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3CorporateHousingDAccept__c</fullName>
    <label>再申請③社宅D確認日（申請前）</label>
    <type>Date</type>
</CustomField>