force-app/main/default/objects/NewMatter__c/fields/Reapplication3FinanceContactContent__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3FinanceContactContent__c</fullName>
    <label>再申請③経理連絡内容（申請前）</label>
    <type>TextArea</type>
</CustomField>