force-app/main/default/objects/NewMatter__c/fields/Reapplication3FinanceCorrespondenceMemo__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3FinanceCorrespondenceMemo__c</fullName>
    <label>再申請③経理対応メモ（申請前）</label>
    <type>TextArea</type>
</CustomField>