force-app/main/default/objects/NewMatter__c/fields/Reapplication3FinanceCorrespondenceMemoA__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3FinanceCorrespondenceMemoA__c</fullName>
    <label>再申請③経理対応メモ（承認後）</label>
    <type>TextArea</type>
</CustomField>