force-app/main/default/objects/NewMatter__c/fields/Reapplication3Memo__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3Memo__c</fullName>
    <label>再申請③再申請メモ</label>
    <type>TextArea</type>
</CustomField>