force-app/main/default/objects/NewMatter__c/fields/Reapplication3ReReconfirmSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3ReReconfirmSubmitDate__c</fullName>
    <label>再申請③（再）再査提出日</label>
    <type>Date</type>
</CustomField>