force-app/main/default/objects/NewMatter__c/fields/ReapplicationOccurrenceDate__c.field-meta.xml
<CustomField>
    <fullName>ReapplicationOccurrenceDate__c</fullName>
    <label>再申請発生日</label>
    <type>Date</type>
</CustomField>