force-app/main/default/objects/NewMatter__c/fields/ReconfirmChargeReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmChargeReturnDate__c</fullName>
    <label>再査から担当へ戻し日</label>
    <type>Date</type>
</CustomField>