force-app/main/default/objects/NewMatter__c/fields/Reconfirmer__c.field-meta.xml
<CustomField>
    <fullName>Reconfirmer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>再査担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ReconfirmerNewMatter</relationshipName>
    <type>Lookup</type>
</CustomField>