force-app/main/default/objects/NewMatter__c/fields/ReconfirmPractitioner__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmPractitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>再査実施者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>o7Me</relationshipName>
    <type>Lookup</type>
</CustomField>