force-app/main/default/objects/NewMatter__c/fields/ReconfirmRequester__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmRequester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>再査依頼者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>o7M0</relationshipName>
    <type>Lookup</type>
</CustomField>