force-app/main/default/objects/NewMatter__c/fields/ReconfirmReturn2__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmReturn2__c</fullName>
    <label>再査戻し②</label>
    <length>255</length>
    <type>Text</type>
</CustomField>