force-app/main/default/objects/NewMatter__c/fields/ReconfirmReturn2Reply__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmReturn2Reply__c</fullName>
    <label>再査戻し②_回答</label>
    <length>255</length>
    <type>Text</type>
</CustomField>