force-app/main/default/objects/NewMatter__c/fields/ReconfirmReturn4__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmReturn4__c</fullName>
    <label>再査戻し④</label>
    <length>255</length>
    <type>Text</type>
</CustomField>