force-app/main/default/objects/NewMatter__c/fields/RecordIdentification__c.field-meta.xml
<CustomField>
    <fullName>RecordIdentification__c</fullName>
    <formula>Name &amp; &quot; &quot;&amp;    Resident__r.FirstName &amp;  Resident__r.LastName   &amp; &quot; &quot; &amp;  TEXT(MoveScheduledDate__c)</formula>
    <label>レコード特定</label>
    <type>Text</type>
</CustomField>