force-app/main/default/objects/NewMatter__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <label>五点セット督促者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>