force-app/main/default/objects/NewMatter__c/fields/RemittanceAmount1__c.field-meta.xml
<CustomField>
    <fullName>RemittanceAmount1__c</fullName>
    <label>契約金送金先1_送金額(税抜)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>