force-app/main/default/objects/NewMatter__c/fields/RemittanceTaxAmount2__c.field-meta.xml
<CustomField>
    <fullName>RemittanceTaxAmount2__c</fullName>
    <label>契約金送金先2_税額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>