force-app/main/default/objects/NewMatter__c/fields/Rent__c.field-meta.xml
<CustomField>
    <fullName>Rent__c</fullName>
    <formula>FifthSetConfirm__r.Rent__c</formula>
    <label>家賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>