force-app/main/default/objects/NewMatter__c/fields/RentFixedCostAmount__c.field-meta.xml
<CustomField>
    <fullName>RentFixedCostAmount__c</fullName>
    <formula>FifthSetConfirm__r.RentFixedCostAmount1__c + FifthSetConfirm__r.RentFixedCostAmount2__c + FifthSetConfirm__r.RentFixedCostAmount3__c</formula>
    <label>月額固定費_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>