force-app/main/default/objects/NewMatter__c/fields/ResidentName__c.field-meta.xml
<CustomField>
    <fullName>ResidentName__c</fullName>
    <formula>Resident__r.LastName  +   Resident__r.FirstName</formula>
    <label>入居者名</label>
    <type>Text</type>
</CustomField>