force-app/main/default/objects/NewMatter__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <formula>FifthSetConfirm__r.Reward__c</formula>
    <label>礼金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>