force-app/main/default/objects/NewMatter__c/fields/RoomNumCheck__c.field-meta.xml
<CustomField>
    <fullName>RoomNumCheck__c</fullName>
    <formula>IF (
     DecisionRealEstateRoom__c   =   DecisionRealEstateRoomForEmployee__c  ,
   &quot;OK&quot;,
   &quot;NG&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>部屋番号チェック</label>
    <type>Text</type>
</CustomField>