force-app/main/default/objects/NewMatter__c/fields/Scanner__c.field-meta.xml
<CustomField>
    <fullName>Scanner__c</fullName>
    <label>スキャン者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>