force-app/main/default/objects/NewMatter__c/fields/Seal__c.field-meta.xml
<CustomField>
    <fullName>Seal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>捺印管理</label>
    <referenceTo>Seal__c</referenceTo>
    <relationshipLabel>新規</relationshipLabel>
    <relationshipName>r97M</relationshipName>
    <type>Lookup</type>
</CustomField>