force-app/main/default/objects/NewMatter__c/fields/SecondaryCheckDate__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCheckDate__c</fullName>
    <label>経理手配2次チェック日</label>
    <type>Date</type>
</CustomField>