force-app/main/default/objects/NewMatter__c/fields/SecondaryToFirstConfirmRequestDate__c.field-meta.xml
<CustomField>
    <fullName>SecondaryToFirstConfirmRequestDate__c</fullName>
    <label>2次から1次へ確認依頼日</label>
    <type>Date</type>
</CustomField>