force-app/main/default/objects/NewMatter__c/fields/SecurityDepositDeal__c.field-meta.xml
<CustomField>
    <fullName>SecurityDepositDeal__c</fullName>
    <label>敷金扱い</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>継承</fullName>
            </value>
            <value>
                <fullName>償却</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>