force-app/main/default/objects/NewMatter__c/fields/SelfPayByCompanySpecial__c.field-meta.xml
<CustomField>
    <fullName>SelfPayByCompanySpecial__c</fullName>
    <formula>Account__r.ServiceContractNewMatter__r.SelfPayContactByCompanySpecialGuidance__c</formula>
    <label>個人負担連絡_企業別特別案内</label>
    <type>Text</type>
</CustomField>