force-app/main/default/objects/NewMatter__c/fields/SelfPayConfirmer__c.field-meta.xml
<CustomField>
    <fullName>SelfPayConfirmer__c</fullName>
    <label>個人負担確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>