force-app/main/default/objects/NewMatter__c/fields/SelfPayContactByCompanyOverallGuidan__c.field-meta.xml
<CustomField>
    <fullName>SelfPayContactByCompanyOverallGuidan__c</fullName>
    <formula>Account__r.ServiceContractNewMatter__r.SelfPayContactByCompanyOverallGuidance__c</formula>
    <label>個人負担連絡_企業別全体案内</label>
    <type>Text</type>
</CustomField>