force-app/main/default/objects/NewMatter__c/fields/SelfPayContactSubject__c.field-meta.xml
<CustomField>
    <fullName>SelfPayContactSubject__c</fullName>
    <formula>Account__r.ServiceContractNewMatter__r.SelfPayContactSubject__c</formula>
    <label>個人負担連絡_件名</label>
    <type>Text</type>
</CustomField>