force-app/main/default/objects/NewMatter__c/fields/SendDocumentType__c.field-meta.xml
<CustomField>
    <fullName>SendDocumentType__c</fullName>
    <label>書類送付方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>メールで送付</fullName>
            </value>
            <value>
                <fullName>chatterに添付</fullName>
            </value>
            <value>
                <fullName>FAXで送付</fullName>
            </value>
            <value>
                <fullName>個別に相談済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>