force-app/main/default/objects/NewMatter__c/fields/ServiceContractNewMatter__c.field-meta.xml
<CustomField>
    <fullName>ServiceContractNewMatter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業ルール</label>
    <referenceTo>ServiceContractNewMatter__c</referenceTo>
    <relationshipLabel>新規</relationshipLabel>
    <relationshipName>ServiceContractNewMatter_1</relationshipName>
    <type>Lookup</type>
</CustomField>