force-app/main/default/objects/NewMatter__c/fields/SOInputArranger__c.field-meta.xml
<CustomField>
    <fullName>SOInputArranger__c</fullName>
    <label>SO入力手配者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>