force-app/main/default/objects/NewMatter__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>iSaf</relationshipName>
    <type>Lookup</type>
</CustomField>