force-app/main/default/objects/NewMatter__c/fields/StaffName__c.field-meta.xml
<CustomField>
    <fullName>StaffName__c</fullName>
    <formula>Staff__r.LastName &amp; Staff__r.FirstName</formula>
    <label>担当者名</label>
    <type>Text</type>
</CustomField>