force-app/main/default/objects/NewMatter__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>申請待ち</fullName>
                <default>true</default>
                <label>申請待ち</label>
            </value>
            <value>
                <fullName>申請確認中</fullName>
            </value>
            <value>
                <fullName>選定中</fullName>
            </value>
            <value>
                <fullName>書類準備中</fullName>
            </value>
            <value>
                <fullName>契約条件確認中</fullName>
            </value>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>締結中</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>決裁申請中</fullName>
            </value>
            <value>
                <fullName>作業中</fullName>
                <isActive>false</isActive>
                <label>作業中</label>
            </value>
            <value>
                <fullName>再査中</fullName>
                <isActive>false</isActive>
                <label>再査中</label>
            </value>
            <value>
                <fullName>契約内容確認中</fullName>
                <isActive>false</isActive>
                <label>契約内容確認中</label>
            </value>
            <value>
                <fullName>契約書原本保管</fullName>
                <isActive>false</isActive>
                <label>契約書原本保管</label>
            </value>
            <value>
                <fullName>承認連絡準備中</fullName>
                <isActive>false</isActive>
                <label>承認連絡準備中</label>
            </value>
            <value>
                <fullName>新規</fullName>
                <isActive>false</isActive>
                <label>新規</label>
            </value>
            <value>
                <fullName>書類到着待ち</fullName>
                <isActive>false</isActive>
                <label>書類到着待ち</label>
            </value>
            <value>
                <fullName>書類締結中</fullName>
                <isActive>false</isActive>
                <label>書類締結中</label>
            </value>
            <value>
                <fullName>条件確認中</fullName>
                <isActive>false</isActive>
                <label>条件確認中</label>
            </value>
            <value>
                <fullName>物件決定待ち</fullName>
                <isActive>false</isActive>
                <label>物件決定待ち</label>
            </value>
            <value>
                <fullName>申請受付</fullName>
                <isActive>false</isActive>
                <label>申請受付</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>