force-app/main/default/objects/NewMatter__c/fields/TestEmailFaxReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>TestEmailFaxReceiptDate__c</fullName>
    <label>テストメール返信受領日</label>
    <type>Date</type>
</CustomField>