force-app/main/default/objects/NewMatter__c/fields/TestEmailFaxSendDate__c.field-meta.xml
<CustomField>
    <fullName>TestEmailFaxSendDate__c</fullName>
    <label>テストメール送信日</label>
    <type>Date</type>
</CustomField>