force-app/main/default/objects/NewMatter__c/fields/ToEmployeeApprovalContact__c.field-meta.xml
<CustomField>
    <fullName>ToEmployeeApprovalContact__c</fullName>
    <label>社員宛承認連絡者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>