force-app/main/default/objects/NewMatter__c/fields/ToEmployeeApprovalContactDate__c.field-meta.xml
<CustomField>
    <fullName>ToEmployeeApprovalContactDate__c</fullName>
    <label>承認後連絡日（社員）</label>
    <type>Date</type>
</CustomField>