force-app/main/default/objects/NewMatter__c/fields/ToTraderRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ToTraderRequestDate__c</fullName>
    <label>業者宛依頼日</label>
    <type>Date</type>
</CustomField>