force-app/main/default/objects/NewMatter__c/fields/ToTraderRequester__c.field-meta.xml
<CustomField>
    <fullName>ToTraderRequester__c</fullName>
    <label>業者宛依頼者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>