force-app/main/default/objects/NewMatter__c/fields/TowardConclusionRequestDate__c.field-meta.xml
<CustomField>
    <fullName>TowardConclusionRequestDate__c</fullName>
    <label>締結へ依頼日</label>
    <type>Date</type>
</CustomField>