force-app/main/default/objects/NewMatter__c/fields/TraderSelectionDate__c.field-meta.xml
<CustomField>
    <fullName>TraderSelectionDate__c</fullName>
    <label>業者選定日</label>
    <type>Date</type>
</CustomField>