force-app/main/default/objects/NewMatter__c/fields/TransferReason__c.field-meta.xml
<CustomField>
    <fullName>TransferReason__c</fullName>
    <formula>&apos;&apos;</formula>
    <label>転勤理由</label>
    <type>Text</type>
</CustomField>