force-app/main/default/objects/NewMatter__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <formula>Account__r.LibraryURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL</label>
    <type>Text</type>
</CustomField>