force-app/main/default/objects/NewMatter__c/fields/UruruLinkDate__c.field-meta.xml
<CustomField>
    <fullName>UruruLinkDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>外部入力会社連携日</label>
    <type>Date</type>
</CustomField>