force-app/main/default/objects/NewMatter__c/recordTypes/ContractorChange.recordType-meta.xml
<RecordType>
    <fullName>ContractorChange</fullName>
    <active>true</active>
    <label>名義変更</label>
</RecordType>