force-app/main/default/objects/NewMatter__c/recordTypes/MediationRequired.recordType-meta.xml
<RecordType>
    <fullName>MediationRequired</fullName>
    <active>true</active>
    <label>要斡旋</label>
</RecordType>