force-app/main/default/objects/NewMatter__c/recordTypes/Parking.recordType-meta.xml
<RecordType>
    <fullName>Parking</fullName>
    <active>true</active>
    <label>不要/駐車場</label>
</RecordType>