force-app/main/default/objects/NewMatter__c/listViews/AdjustmentRequestUnanswered.listView-meta.xml
<ListView>
    <fullName>AdjustmentRequestUnanswered</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ResidentName__c</columns>
    <columns>ContractStartDate__c</columns>
    <columns>MoveScheduledDate__c</columns>
    <columns>DocumentReceiptDate__c</columns>
    <columns>AgencyConfirmRequestDate__c</columns>
    <columns>ConfirmRequestReplyDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AgencyConfirmRequestDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>SecondaryToFirstConfirmRequestDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>03_調整依頼未回答</label>
</ListView>