force-app/main/default/objects/NewMatter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Stage__c</columns>
    <columns>RealEstate__c</columns>
    <columns>Account__c</columns>
    <columns>Resident__c</columns>
    <columns>MoveScheduledDate__c</columns>
    <columns>ChargeTeam__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Application__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ReconfirmDate__c</columns>
    <columns>DecisionType__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>