force-app/main/default/objects/NewMatter__c/listViews/ApprovalDocumentNotSent.listView-meta.xml
<ListView>
    <fullName>ApprovalDocumentNotSent</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ResidentName__c</columns>
    <columns>ContractStartDate__c</columns>
    <columns>MoveScheduledDate__c</columns>
    <columns>ConfirmationRegistrationDateRealEsta__c</columns>
    <columns>DocumentReceiptDate__c</columns>
    <columns>ContractContentConfirmDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UruruLinkDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>01_稟議書類未送付</label>
</ListView>