force-app/main/default/objects/NewMatter__c/listViews/AssignStaffList.listView-meta.xml
<ListView>
    <fullName>AssignStaffList</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Account__c</columns>
    <columns>Resident__c</columns>
    <columns>ChargeTeam__c</columns>
    <columns>Staff__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Staff__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>完了</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NewMatter__c.MediationRequired</value>
    </filters>
    <label>担当者割り当てが必要な新規業務</label>
</ListView>