force-app/main/default/objects/NewMatter__c/listViews/CompleteNewMatterRealEstate.listView-meta.xml
<ListView>
    <fullName>CompleteNewMatterRealEstate</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RealEstate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ListViewRealEstate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>完了</value>
    </filters>
    <label>完了した新規手続き(不動産会社)</label>
</ListView>