force-app/main/default/objects/NewMatter__c/listViews/ConfirmationUnregistered.listView-meta.xml
<ListView>
    <fullName>ConfirmationUnregistered</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ResidentName__c</columns>
    <columns>ContractStartDate__c</columns>
    <columns>MoveScheduledDate__c</columns>
    <columns>ConfirmationRegistrationDateRealEsta__c</columns>
    <columns>DocumentReceiptDate__c</columns>
    <columns>ContractContentConfirmDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ConfirmationRegistrationDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>02_ご確認書未登録</label>
</ListView>