force-app/main/default/objects/NewMatter__c/listViews/Incomplete.listView-meta.xml
<ListView>
    <fullName>Incomplete</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ResidentName__c</columns>
    <columns>ContractStartDate__c</columns>
    <columns>MoveScheduledDate__c</columns>
    <columns>DecisionAcquisitionDate__c</columns>
    <columns>ContractMoneyRemittanceDate__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>締結中</value>
    </filters>
    <label>06_未完了のもの</label>
</ListView>