force-app/main/default/objects/NewMatter__c/listViews/NewMatterQueue_NewMatter.listView-meta.xml
<ListView>
    <fullName>NewMatterQueue_NewMatter</fullName>
    <filterScope>Queue</filterScope>
    <label>新規チーム</label>
    <queue>NewMatterQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>