force-app/main/default/objects/NewMatter__c/listViews/NewMatterReconfirmGroup_NewMatter.listView-meta.xml
<ListView>
    <fullName>NewMatterReconfirmGroup_NewMatter</fullName>
    <filterScope>Queue</filterScope>
    <label>新規再査チーム</label>
    <queue>NewMatterReconfirmGroup</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>