force-app/main/default/objects/NewMatter__c/listViews/NewMatterReconfirmRequestStaffCompleted.listView-meta.xml
<ListView>
    <fullName>NewMatterReconfirmRequestStaffCompleted</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reconfirmer__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ReconfirmRequestDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ReconfirmDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>DecisionApplicationDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>再査担当リストビュー(完了)</label>
</ListView>